# ppl-cross-compile

./: CMakeLists.txt  justfile  main.cu
.devcontainer/: devcontainer.json
